--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,6 +3,6 @@
     "message": "The Verge - Is It A Thing"
   },
   "appDesc": {
-    "message": "Adds 'and I have no idea if that’s a sex thing'. to all headlines on theverge.com. Created by Mehedi Hassan https://twitter.com/mehedih_", 
+    "message": "Adds 'and I have no idea if that’s a sex thing'. to all headlines on theverge.com. Created by Mehedi Hassan https://twitter.com/mehedih_"
   }
 }
