--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -3,6 +3,6 @@
     "message": "The Verge - Is It A Thing"
   },
   "appDesc": {
-    "message": "Tilføjer 'and I have no idea if that’s a sex thing'. til overskrifter på theverge.com. Lavet af Mehedi Hassan https://twitter.com/mehedih_" 
+    "message": "Tilføjer 'and I have no idea if that’s a sex thing'. Til alle overskrifter på theverge.com" 
   }
 }
